--- a/templates/index.html
+++ b/templates/index.html
@@ -61,17 +61,25 @@
 			<h2>Descrição das Variáveis</h2>
 			<span class="byline"></span> </div>
 		
-
+	<br>
     <p>
     <strong> Gravidez: </strong> Número de vezes que engravidou.<br><br>
-    <strong> Glicose: </strong> Concentração de glicose plasmática a 2 horas em um teste oral de tolerância à glicose.<br><br>
-    <strong> Pressão arterial: </strong> Pressão arterial diastólica (mm Hg).<br><br>
-    <strong> SkinThickness: </strong> Espessura da dobra da pele do tríceps (mm).<br><br>
+
+    <strong> Glicose: </strong> Concentração de glicose plasmática a 2 horas em um teste oral de tolerância à glicose. Têm tolerância à glicose diminuída quando, duas horas após o teste, sua glicemia está igual ou superior a 140 mg/dL e menor que 200 mg/dL. Acima desse limite, o resultado é compatível com o diabetes mellitus (Tipo 1).<br><br>
+
+    <strong> Pressão arterial: </strong> Pressão arterial diastólica (mm Hg). Pressão arterial diastólica > 90 significa pressão alta (alta probabilidade de diabetes), pressão arterial diastólica < 60 significa pressão baixa (menor probabilidade de diabetes)<br><br>
+
+    <strong> Espessura da pele: </strong> Espessura da dobra da pele do tríceps (mm). valor usado para estimar a gordura corporal> Maior espessura leva à obesidade e aumenta as chances de diabetes..<br><br>
+    
     <strong> Insulina: </strong> Insulina sérica de 2 horas (mu U / ml).<br><br>
-    <strong> IMC: </strong> Índice de massa corporal (peso em kg / (altura em m) ^ 2).<br><br>
-    <strong> DiabetesPedigreeFunction (PF): </strong> Função de pedigree de diabetes.<br><br>
+    
+    <strong> IMC: </strong> Índice de massa corporal (peso em kg / (altura em m) ^ 2). Massa Corporal de 18,5 a 25 está dentro da faixa normal de IMC entre 25 e 30, então ele está dentro da faixa de sobrepeso. Um IMC de 30 ou mais está dentro da faixa de obesidade.<br><br>
+
+    <strong> Função da Linhagem de Diabetes: </strong> Fornece informações sobre o histórico de diabetes em parentes e a relação genética desses parentes com os pacientes. A função de linhagem superior significa que o paciente tem maior probabilidade de ter diabetes..<br><br>
+    
     <strong> Idade: </strong> Idade.<br><br>
     </p>
+
 
 
     <div class="container">
