--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
 			<p>O diabetes é uma doença crônica em que o corpo desenvolve resistência à insulina, um hormônio que converte os alimentos em glicose. O diabetes afeta muitas pessoas em todo o mundo e é normalmente dividido em diabetes tipo 1 e tipo 2. Ambos possuem características diferentes.</p>
 			<p>O objetivo é <strong>prever</strong> com diagnóstico se um paciente tem diabetes ou não, com base em certas medidas diagnósticas.
     		O conjunto de dados consistem em várias variáveis ​​preditoras médicas e uma variável de destino (Target).</p>
-    		<p>Abaixo as variáveis que devem ser preenchidas para o Modelo fazer a previsão. Esse modelo foi treinado por diversos algoritimos e obteve acurácia de 92.21%</p><br>
+    		<p>Abaixo as variáveis que devem ser preenchidas para o Modelo fazer a previsão. Esse modelo foi treinado por diversos algoritimos e obteve acurácia de <strong>92.21%</strong></p><br>
 		</h5>
 
 </div>
@@ -108,7 +108,7 @@
         </div>
 
         <div class="form-group row">
-          <label for="SkinThickness" class="col-sm-2 col-form-label">SkinThickness</label>
+          <label for="SkinThickness" class="col-sm-2 col-form-label">Espessura da pele</label>
           <div class="col-sm-3">
             <input type="value" class="form-control" id="SkinThickness"  name="SkinThickness">
           </div>
@@ -129,7 +129,7 @@
         </div>
 
         <div class="form-group row">
-          <label for="DiabetesPedigreeFunction" class="col-sm-2 col-form-label">Diabetes (PF)</label>
+          <label for="DiabetesPedigreeFunction" class="col-sm-2 col-form-label">Linhagem de Diabetes</label>
           <div class="col-sm-3">
             <input type="value" class="form-control" name="DiabetesPedigreeFunction" id="DiabetesPedigreeFunction" required="True">
           </div>
